// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert snapshot Alert demo snapshot 0 1`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "stretch",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "margin": "0 auto",
      "maxWidth": 350,
    }
  }
>
  <div
    className="bui-alert bui-alert-standard-primary"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff335c"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"m24.1 30.2 20.2-12.5c2.3-1.4 5.4-.7 6.9 1.6.5.8.8 1.7.8 2.6V74c0 2.7-2.2 4.9-5 4.9-.9 0-1.9-.3-2.6-.8L24.1 65.8H15c-3.9 0-7-3.1-7-6.9V37.1c0-3.8 3.1-6.9 7-6.9h9.1zm2.5 5.5c-.5.3-1 .5-1.6.5H15c-.6 0-1 .4-1 1v21.7c0 .5.4 1 1 1h10c.6 0 1.1.2 1.6.5l19.4 12V23.7l-19.4 12zm48.5 42.1c-1.2 1.1-3.1 1.1-4.2-.1-1.2-1.2-1.1-3.1.1-4.2 14.8-14.1 14.8-36.9 0-51-1.2-1.1-1.2-3-.1-4.2 1.2-1.2 3.1-1.2 4.2-.1 17.2 16.5 17.2 43.1 0 59.6zM65.1 66c-1.2 1.1-3.1 1.1-4.2-.1-1.1-1.2-1.1-3.1.1-4.2 8.1-7.6 8.1-19.7 0-27.3-1.2-1.1-1.3-3-.1-4.2 1.1-1.2 3-1.2 4.2-.1 10.5 9.8 10.5 26 0 35.9z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
</div>
`;

exports[`Alert snapshot Alert demo snapshot 0 2`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "stretch",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
      "margin": "0 auto",
      "maxWidth": 350,
    }
  }
>
  <div
    className="bui-alert bui-alert-standard-primary"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff335c"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"m24.1 30.2 20.2-12.5c2.3-1.4 5.4-.7 6.9 1.6.5.8.8 1.7.8 2.6V74c0 2.7-2.2 4.9-5 4.9-.9 0-1.9-.3-2.6-.8L24.1 65.8H15c-3.9 0-7-3.1-7-6.9V37.1c0-3.8 3.1-6.9 7-6.9h9.1zm2.5 5.5c-.5.3-1 .5-1.6.5H15c-.6 0-1 .4-1 1v21.7c0 .5.4 1 1 1h10c.6 0 1.1.2 1.6.5l19.4 12V23.7l-19.4 12zm48.5 42.1c-1.2 1.1-3.1 1.1-4.2-.1-1.2-1.2-1.1-3.1.1-4.2 14.8-14.1 14.8-36.9 0-51-1.2-1.1-1.2-3-.1-4.2 1.2-1.2 3.1-1.2 4.2-.1 17.2 16.5 17.2 43.1 0 59.6zM65.1 66c-1.2 1.1-3.1 1.1-4.2-.1-1.1-1.2-1.1-3.1.1-4.2 8.1-7.6 8.1-19.7 0-27.3-1.2-1.1-1.3-3-.1-4.2 1.1-1.2 3-1.2 4.2-.1 10.5 9.8 10.5 26 0 35.9z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-primary"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 6c-18.8 0-34 15.2-34 34s15.2 34 34 34 34-15.2 34-34-15.2-34-34-34zm13 27c0 6.2-4.4 11.3-10.2 12.7V57c0 1.7-1.3 3-3 3s-3-1.3-3-3v-6c0-1.7 1.3-3 3-3 4 0 7.2-3.1 7.2-7s-3.2-7-7.2-7c-2.5 0-4.8 1.2-6.1 3.2-.3.5-.6 1.1-.8 1.7-.5 1.6-2.2 2.4-3.8 1.9-1.6-.5-2.4-2.2-1.9-3.8.4-1.1.9-2.1 1.5-3.1 2.4-3.7 6.6-5.9 11.1-5.9C55.1 28 61 33.8 61 41zM48 69c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3-1.3 3-3 3z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-primary"
  >
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
</div>
`;

exports[`Alert snapshot Alert demo snapshot 0 3`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "stretch",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
      "margin": "0 auto",
      "maxWidth": 350,
    }
  }
>
  <div
    className="bui-alert bui-alert-standard-primary"
  >
    <div
      className="bui-alert-marquee"
    >
      <div
        className="bui-alert-content bui-alert-marquee-content"
      >
        【开始】首部海外维和题材商业大片高燃来袭，聚焦中国维和警察鲜为人知的生死时刻！【结束】
      </div>
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-primary"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 6c-18.8 0-34 15.2-34 34s15.2 34 34 34 34-15.2 34-34-15.2-34-34-34zm13 27c0 6.2-4.4 11.3-10.2 12.7V57c0 1.7-1.3 3-3 3s-3-1.3-3-3v-6c0-1.7 1.3-3 3-3 4 0 7.2-3.1 7.2-7s-3.2-7-7.2-7c-2.5 0-4.8 1.2-6.1 3.2-.3.5-.6 1.1-.8 1.7-.5 1.6-2.2 2.4-3.8 1.9-1.6-.5-2.4-2.2-1.9-3.8.4-1.1.9-2.1 1.5-3.1 2.4-3.7 6.6-5.9 11.1-5.9C55.1 28 61 33.8 61 41zM48 69c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3-1.3 3-3 3z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-marquee"
    >
      <div
        className="bui-alert-content bui-alert-marquee-content"
      >
        【开始】首部海外维和题材商业大片高燃来袭，聚焦中国维和警察鲜为人知的生死时刻！【结束】
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert snapshot Alert demo snapshot 0 4`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "stretch",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
      "margin": "0 auto",
      "maxWidth": 350,
    }
  }
>
  <div
    className="bui-alert bui-alert-standard-primary"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff335c"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"m24.1 30.2 20.2-12.5c2.3-1.4 5.4-.7 6.9 1.6.5.8.8 1.7.8 2.6V74c0 2.7-2.2 4.9-5 4.9-.9 0-1.9-.3-2.6-.8L24.1 65.8H15c-3.9 0-7-3.1-7-6.9V37.1c0-3.8 3.1-6.9 7-6.9h9.1zm2.5 5.5c-.5.3-1 .5-1.6.5H15c-.6 0-1 .4-1 1v21.7c0 .5.4 1 1 1h10c.6 0 1.1.2 1.6.5l19.4 12V23.7l-19.4 12zm48.5 42.1c-1.2 1.1-3.1 1.1-4.2-.1-1.2-1.2-1.1-3.1.1-4.2 14.8-14.1 14.8-36.9 0-51-1.2-1.1-1.2-3-.1-4.2 1.2-1.2 3.1-1.2 4.2-.1 17.2 16.5 17.2 43.1 0 59.6zM65.1 66c-1.2 1.1-3.1 1.1-4.2-.1-1.1-1.2-1.1-3.1.1-4.2 8.1-7.6 8.1-19.7 0-27.3-1.2-1.1-1.3-3-.1-4.2 1.1-1.2 3-1.2 4.2-.1 10.5 9.8 10.5 26 0 35.9z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-warning"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff8533"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 51c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zm0-34c-2.2 0-4 1.8-4 4v22c0 2.2 1.8 4 4 4s4-1.8 4-4V29c0-2.2-1.8-4-4-4z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-success"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#00d68f"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm17.1 27.9c-1.2-1.2-3.1-1.2-4.2 0L43 53.8l-7.9-7.9c-1.2-1.2-3.1-1.2-4.2 0s-1.2 3.1 0 4.2l10 10c1.2 1.2 3.1 1.2 4.2 0l20-20c1.2-1.2 1.2-3.1 0-4.2z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-danger"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff335c"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm-8.1 27.8c-1.1-1.1-2.9-1.1-4.1 0s-1.1 2.9 0 4.1l8.1 8.1-8.1 8.1c-1.1 1.1-1.1 2.9 0 4.1s2.9 1.1 4.1 0l8.1-8.1 8.1 8.1c1.1 1.1 2.9 1.1 4.1 0s1.1-2.9 0-4.1L52.1 48l8.1-8.1c1.1-1.1 1.1-2.9 0-4.1s-2.9-1.1-4.1 0L48 43.9l-8.1-8.1z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-info"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#148aff"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 51c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zm0-34c-2.2 0-4 1.8-4 4v22c0 2.2 1.8 4 4 4s4-1.8 4-4V29c0-2.2-1.8-4-4-4z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
</div>
`;

exports[`Alert snapshot Alert demo snapshot 0 5`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "stretch",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
      "margin": "0 auto",
      "maxWidth": 350,
    }
  }
>
  <div
    className="bui-alert bui-alert-standard-primary"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff335c"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"m24.1 30.2 20.2-12.5c2.3-1.4 5.4-.7 6.9 1.6.5.8.8 1.7.8 2.6V74c0 2.7-2.2 4.9-5 4.9-.9 0-1.9-.3-2.6-.8L24.1 65.8H15c-3.9 0-7-3.1-7-6.9V37.1c0-3.8 3.1-6.9 7-6.9h9.1zm2.5 5.5c-.5.3-1 .5-1.6.5H15c-.6 0-1 .4-1 1v21.7c0 .5.4 1 1 1h10c.6 0 1.1.2 1.6.5l19.4 12V23.7l-19.4 12zm48.5 42.1c-1.2 1.1-3.1 1.1-4.2-.1-1.2-1.2-1.1-3.1.1-4.2 14.8-14.1 14.8-36.9 0-51-1.2-1.1-1.2-3-.1-4.2 1.2-1.2 3.1-1.2 4.2-.1 17.2 16.5 17.2 43.1 0 59.6zM65.1 66c-1.2 1.1-3.1 1.1-4.2-.1-1.1-1.2-1.1-3.1.1-4.2 8.1-7.6 8.1-19.7 0-27.3-1.2-1.1-1.3-3-.1-4.2 1.1-1.2 3-1.2 4.2-.1 10.5 9.8 10.5 26 0 35.9z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-warning"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff8533"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 51c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zm0-34c-2.2 0-4 1.8-4 4v22c0 2.2 1.8 4 4 4s4-1.8 4-4V29c0-2.2-1.8-4-4-4z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-danger"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff335c"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm-8.1 27.8c-1.1-1.1-2.9-1.1-4.1 0s-1.1 2.9 0 4.1l8.1 8.1-8.1 8.1c-1.1 1.1-1.1 2.9 0 4.1s2.9 1.1 4.1 0l8.1-8.1 8.1 8.1c1.1 1.1 2.9 1.1 4.1 0s1.1-2.9 0-4.1L52.1 48l8.1-8.1c1.1-1.1 1.1-2.9 0-4.1s-2.9-1.1-4.1 0L48 43.9l-8.1-8.1z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-info"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#148aff"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 51c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zm0-34c-2.2 0-4 1.8-4 4v22c0 2.2 1.8 4 4 4s4-1.8 4-4V29c0-2.2-1.8-4-4-4z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-success"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#00d68f"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm17.1 27.9c-1.2-1.2-3.1-1.2-4.2 0L43 53.8l-7.9-7.9c-1.2-1.2-3.1-1.2-4.2 0s-1.2 3.1 0 4.2l10 10c1.2 1.2 3.1 1.2 4.2 0l20-20c1.2-1.2 1.2-3.1 0-4.2z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
</div>
`;

exports[`Alert snapshot Alert demo snapshot 0 6`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "stretch",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
      "margin": "0 auto",
      "maxWidth": 350,
    }
  }
>
  <div
    className="bui-alert bui-alert-outlined-primary"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff335c"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"m24.1 30.2 20.2-12.5c2.3-1.4 5.4-.7 6.9 1.6.5.8.8 1.7.8 2.6V74c0 2.7-2.2 4.9-5 4.9-.9 0-1.9-.3-2.6-.8L24.1 65.8H15c-3.9 0-7-3.1-7-6.9V37.1c0-3.8 3.1-6.9 7-6.9h9.1zm2.5 5.5c-.5.3-1 .5-1.6.5H15c-.6 0-1 .4-1 1v21.7c0 .5.4 1 1 1h10c.6 0 1.1.2 1.6.5l19.4 12V23.7l-19.4 12zm48.5 42.1c-1.2 1.1-3.1 1.1-4.2-.1-1.2-1.2-1.1-3.1.1-4.2 14.8-14.1 14.8-36.9 0-51-1.2-1.1-1.2-3-.1-4.2 1.2-1.2 3.1-1.2 4.2-.1 17.2 16.5 17.2 43.1 0 59.6zM65.1 66c-1.2 1.1-3.1 1.1-4.2-.1-1.1-1.2-1.1-3.1.1-4.2 8.1-7.6 8.1-19.7 0-27.3-1.2-1.1-1.3-3-.1-4.2 1.1-1.2 3-1.2 4.2-.1 10.5 9.8 10.5 26 0 35.9z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-outlined-warning"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff8533"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 51c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zm0-34c-2.2 0-4 1.8-4 4v22c0 2.2 1.8 4 4 4s4-1.8 4-4V29c0-2.2-1.8-4-4-4z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-outlined-danger"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff335c"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm-8.1 27.8c-1.1-1.1-2.9-1.1-4.1 0s-1.1 2.9 0 4.1l8.1 8.1-8.1 8.1c-1.1 1.1-1.1 2.9 0 4.1s2.9 1.1 4.1 0l8.1-8.1 8.1 8.1c1.1 1.1 2.9 1.1 4.1 0s1.1-2.9 0-4.1L52.1 48l8.1-8.1c1.1-1.1 1.1-2.9 0-4.1s-2.9-1.1-4.1 0L48 43.9l-8.1-8.1z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-outlined-info"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#148aff"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 51c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zm0-34c-2.2 0-4 1.8-4 4v22c0 2.2 1.8 4 4 4s4-1.8 4-4V29c0-2.2-1.8-4-4-4z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-outlined-success"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#00d68f"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm17.1 27.9c-1.2-1.2-3.1-1.2-4.2 0L43 53.8l-7.9-7.9c-1.2-1.2-3.1-1.2-4.2 0s-1.2 3.1 0 4.2l10 10c1.2 1.2 3.1 1.2 4.2 0l20-20c1.2-1.2 1.2-3.1 0-4.2z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
</div>
`;

exports[`Alert snapshot Alert demo snapshot 0 7`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "stretch",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
      "margin": "0 auto",
      "maxWidth": 350,
    }
  }
>
  <div
    className="bui-alert bui-alert-standard-warning"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff8533"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 51c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zm0-34c-2.2 0-4 1.8-4 4v22c0 2.2 1.8 4 4 4s4-1.8 4-4V29c0-2.2-1.8-4-4-4z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
  </div>
  <div
    className="bui-alert bui-alert-standard-success"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#00d68f"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm17.1 27.9c-1.2-1.2-3.1-1.2-4.2 0L43 53.8l-7.9-7.9c-1.2-1.2-3.1-1.2-4.2 0s-1.2 3.1 0 4.2l10 10c1.2 1.2 3.1 1.2 4.2 0l20-20c1.2-1.2 1.2-3.1 0-4.2z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-success bui-alert-action"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"m53.6 48 21.2 21.2c1.6 1.6 1.6 4.1 0 5.6-1.6 1.6-4.1 1.6-5.6 0L48 53.6 26.8 74.8c-1.6 1.6-4.1 1.6-5.6 0-1.6-1.6-1.6-4.1 0-5.6L42.4 48 21.2 26.8c-1.6-1.6-1.6-4.1 0-5.6s4.1-1.6 5.6 0L48 42.4l21.2-21.2c1.6-1.6 4.1-1.6 5.6 0 1.6 1.6 1.6 4.1 0 5.6L53.6 48z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
  </div>
  <div
    className="bui-alert bui-alert-standard-primary"
  >
    <div
      className="bui-alert-icon"
    >
      <svg
        className="bui-svg-icon bui-alert-default-icon"
        color="#ff335c"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"m24.1 30.2 20.2-12.5c2.3-1.4 5.4-.7 6.9 1.6.5.8.8 1.7.8 2.6V74c0 2.7-2.2 4.9-5 4.9-.9 0-1.9-.3-2.6-.8L24.1 65.8H15c-3.9 0-7-3.1-7-6.9V37.1c0-3.8 3.1-6.9 7-6.9h9.1zm2.5 5.5c-.5.3-1 .5-1.6.5H15c-.6 0-1 .4-1 1v21.7c0 .5.4 1 1 1h10c.6 0 1.1.2 1.6.5l19.4 12V23.7l-19.4 12zm48.5 42.1c-1.2 1.1-3.1 1.1-4.2-.1-1.2-1.2-1.1-3.1.1-4.2 14.8-14.1 14.8-36.9 0-51-1.2-1.1-1.2-3-.1-4.2 1.2-1.2 3.1-1.2 4.2-.1 17.2 16.5 17.2 43.1 0 59.6zM65.1 66c-1.2 1.1-3.1 1.1-4.2-.1-1.1-1.2-1.1-3.1.1-4.2 8.1-7.6 8.1-19.7 0-27.3-1.2-1.1-1.3-3-.1-4.2 1.1-1.2 3-1.2 4.2-.1 10.5 9.8 10.5 26 0 35.9z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-alert-content"
    >
      开票提醒2020.0802下午14:00开售
    </div>
    <div
      className="bui-alert-action"
      onClick={[Function]}
    >
      <div>
        close
      </div>
    </div>
  </div>
</div>
`;
